# rpg-combat-kata

./: .gitignore  README.md  base.py  config.py  main.py  pyproject.toml
character/: entity.py  exception.py  healing.py  state.py  type.py
fighting/: action.py  exceptions.py  factory.py  validators.py
fighting/strategies/: character.py  vegetation.py
fraction/: ally.py  entity.py  exception.py  membership.py
localization/: exception.py  position.py
tests/unit/: conftest.py
tests/unit/test_character/: test_healing.py  test_settings.py
tests/unit/test_fighting/: test_factory.py
tests/unit/test_fighting/test_strategies/: conftest.py  test_character.py  test_character_power.py  test_vegetation.py
tests/unit/test_fraction/: test_membership.py
tests/unit/test_localization/: test_position.py
tests/unit/test_vegetation/: test_settings.py
vegetation/: entity.py  state.py  type.py
